Fixed code overflowing on small screens

--- a/documentation/assets/css/site.css
+++ b/documentation/assets/css/site.css
@@ -367,6 +367,7 @@ main hr
 main pre
 {
     padding: 20px;
+    overflow: auto;
 }
 
 main .alert-info
